# ArmesCPU_old_RUST

./: .gitattributes  .gitignore  Cargo.toml  RAM.mmap  README.md  ROM.mmap  ROM.rommap  asmCompiler.py  config.py  config.toml  cpu.py  instconfig.py  makefile  microinstconfig.py  program.armes.asm  romCompiler.py
armes_cpu_lib/: Cargo.toml  README.md  makefile
armes_cpu_lib/src/: ALU.rs  bus.rs  compile.rs  config.rs  flags.rs  lib.rs  memory.rs  output.rs  register.rs
armes_cpu_wasm/: .gitignore  Cargo.toml  makefile
armes_cpu_wasm/src/: configloader.rs  lib.rs  wasm_memory.rs
armes_cpu_wasm/web/: elements.js  index.css  index.html  index.js
armes_cpu_wasm/web/lib/: codemirror.css  codemirror.js
armes_cpu_wasm/web/mode/: armes_asm.js  rommap.js  toml.js
armes_cpu_wasm/web/wasm/: setup_wasm.js
memory/: RAM.mmap  ROM.mmap  ram.mmap  rom.mmap
programs/: ROM.rommap  program.armes.asm
src/: asmcompiler.rs  configloader.rs  main.rs  memdump.rs  memory.rs  memoryloader.rs  romcompiler.rs
uncompiled/: asm.armes.asm  rom.rommap
utils/: ALU.py  __init__.py  bus.py  flag.py  memory.py  output.py  register.py
